chore(deps): add Vercel KV for persistent rate limiting and token state
Adds @vercel/kv as a dependency to support persistent storage
for security-critical state, including:
- Rate limiting across serverless invocations
- Token-related state that cannot rely on in-memory storage
- Future extensibility for audit or abuse-prevention use cases

This change aligns the runtime behavior with the refactored
sync implementation and improves reliability in production.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "homepage": "https://github.com/balajiasapu/google_sheets_sync#readme",
     "dependencies": {
+        "@vercel/kv": "^1.0.1",
         "googleapis": "^134.0.0"
     },
     "devDependencies": {
