expand .env.example with KV, mock mode, and runtime config
Updates .env.example to reflect the full runtime configuration,
including:
- Vercel KV connection keys
- MOCK_MODE guard for development and testing
- Rate limiting and environment-specific settings

This ensures contributors and adopters can configure the service
correctly without exposing real secrets.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
-GOOGLE_CLIENT_ID=your-client-id
+# Google OAuth Configuration
+# Get these from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-client-secret
+
+# CORS Configuration
+# Set to your app's domain in production (e.g., https://yourapp.com)
 ALLOWED_ORIGIN=*
+
+# Rate Limiting (Stateful via Vercel KV)
 RATE_LIMIT_PER_HOUR=100
+VERCEL_KV_REST_API_URL=https://your-kv-endpoint.upstash.io
+VERCEL_KV_REST_API_TOKEN=your-kv-token
+
+# Development Settings
 MOCK_MODE=false
+NODE_ENV=development
